--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "10.4.20",
         "bcrypt": "^5.1.1",
         "clsx": "^2.1.1",
+        "motion": "^11.15.0",
         "next": "^15.1.2",
         "next-auth": "5.0.0-beta.19",
         "postcss": "8.4.49",
